
[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyroxed_base = { workspace = true }
ctm_clean_scene = { path = "../game", optional = true }

[features]
default = ["ctm_clean_scene", "fyroxed_base/default"]
dylib = ["fyroxed_base/dylib_engine"]
